--- a/site.css
+++ b/site.css
@@ -1,10 +1,85 @@
+* {
+    font-family: 'Roboto', sans-serif;
+    background-color: #E5E5E5;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .navbar ul {   
     list-style-type: none;
+    width: 100%;
+    text-align: left;
+    background-position: 100%;
+    position: absolute;
+    left: 70%;
+    color:  #8C5E58;
+}
+
+.navbar ul li {
+    display: inline;
+    padding: 10px 10px;
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar li a {
+    text-decoration: none;
+    color:  #8C5E58;
+}
+
+.current-page {
+    font-weight: bold;
 }
 
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+    text-align: center;
+}
+
+.bio {
+    width: 60%;
+}
+
+.portrait {
+    float: right;
+}
+
+.icons {
+    stroke-width: 1px;
+    fill: #F2545B;
+}
+
+h1 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+
+    color: #A93F55;
+}
+
+h2 {
+    color: #F2545B;
+    font-size: 24pt;
+    line-height: 0.5em;
+}
+
+p {
+    text-indent: 4em;
+    padding: 0em 6em 0em 6em; 
+    font-size: 14pt;
+}
+
+ol {
+    padding-left: 13em;
+    font-size: 14pt;
+}
+
+ul {
+    padding-left: 13em;
+    font-size: 14pt;
+}
