--- a/site.css
+++ b/site.css
@@ -1,30 +1,26 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    background-color: #E5E5E5;
+    background-color: #F3F7F0;
+    font-family: 'Roboto';
 }
 
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar ul {   
     list-style-type: none;
-    width: 100%;
-    text-align: left;
-    background-position: 100%;
     position: absolute;
-    left: 70%;
     color:  #8C5E58;
+    right: 10em;
 }
 
 .navbar ul li {
     display: inline;
-    padding: 10px 10px;
-}
-
-.navbar li {
-    float: left;
+    padding: 0px 10px;
+    font-size: 24pt;
 }
 
 .navbar li a {
@@ -32,20 +28,25 @@ html, body {
     color:  #8C5E58;
 }
 
-.current-page {
-    font-weight: bold;
-}
-
 .center {
     text-align: center;
 }
 
+.title {
+    padding: 0em 10em 0em 10em; 
+    line-height: 0.5em;
+}
+
 .bio {
     width: 60%;
+    font-size: 14pt;
+    padding: 0em 8.5em 0em 8.5em;
 }
 
 .portrait {
-    float: right;
+    position: absolute;
+    top: 7em;
+    right: 12.5em;
 }
 
 .icons {
@@ -54,7 +55,6 @@ html, body {
 }
 
 h1 {
-    font-family: Roboto;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
@@ -70,16 +70,34 @@ h2 {
 
 p {
     text-indent: 4em;
-    padding: 0em 6em 0em 6em; 
+    padding: 0em 10em 0em 10em; 
     font-size: 14pt;
 }
 
 ol {
-    padding-left: 13em;
+    padding-left: 18em;
     font-size: 14pt;
 }
 
 ul {
-    padding-left: 13em;
+    padding-left: 18em;
     font-size: 14pt;
+}
+
+footer{
+    min-width: 100%;
+    height: 5em;
+    background: #8C5E58;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
+
+.content-footer {
+    min-width: 100%;
+    height: 5em;
+    background: #8C5E58;
+    position: relative;
+    bottom: 0;
+    text-align: center;
 }
