--- a/site.css
+++ b/site.css
@@ -1,31 +1,46 @@
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+} 
+
+@-ms-viewport {
+    width: device-width ;
+} 
+
 * {
     background-color: #F3F7F0;
     font-family: 'Roboto';
 }
 
 html, body {
-    max-width: 100%;
-    overflow-x: hidden;
     margin: 0;
     padding: 0;
 }
 
 .navbar ul {   
     list-style-type: none;
-    position: absolute;
     color:  #8C5E58;
-    right: 10em;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 12.5%;
+    margin-bottom: 0;
 }
 
 .navbar ul li {
     display: inline;
     padding: 0px 10px;
     font-size: 24pt;
+    color:  #F2545B;
 }
 
 .navbar li a {
     text-decoration: none;
     color:  #8C5E58;
+    transition: color 0.5s;
+}
+
+.navbar li a:hover {
+    color:  #F2545B;
 }
 
 .center {
@@ -33,32 +48,118 @@ html, body {
 }
 
 .title {
-    padding: 0em 10em 0em 10em; 
-    line-height: 0.5em;
+    padding-left: 12.5%;
+    line-height: 5px;
+    width: 75%;
 }
 
-.bio {
-    width: 60%;
+.projects ul {
+    list-style-type: none;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.projects ul li {
+    border-radius: 25px;
+    background: #F3F7F0;
+    padding: 20px; 
+    width: 90%;
+    margin: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    transition: 0.4s;
+}
+
+.projects ul li:hover {
+    transform: scale(1.05, 1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.project-title {
+    color: #F2545B;
+    font-size: 24pt;
+    width: 75%;
+}
+
+.project-description {
+    width: 75%;
+}
+
+.project-icon {
+    margin-top: -40px;
+    float: right;
+    background: transparent;
+}
+
+.project-link {
+    text-decoration: none;
+    color: white;
+    background-color: transparent;
+}
+
+.button-link {
+    color: white;
+    text-decoration: none;
+    background-color: transparent;
+    vertical-align: middle;
+}
+
+.redirect-button {
+    background-color: #A93F55;
+    border-radius: 30px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 15px; 
+    width: 270px;
     font-size: 14pt;
-    padding: 0em 8.5em 0em 8.5em;
+    transition: 0.5s;
 }
 
-.portrait {
-    position: absolute;
-    top: 7em;
-    right: 12.5em;
+.redirect-button:hover {
+    transform: scale(1.05, 1.05);
+    background:  #F2545B;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
-.icons {
-    position: absolute;
-    top: 55%;
-    right: 12.5em;
+.see-more {
+    border-radius: 30px;
+    background: #A93F55;
+    padding: 15px; 
+    width: 175px;
+    height: 20px;  
+    text-align: center;
+    vertical-align: middle;
+    transition: background 0.5s;
+}
+
+.see-more:hover {
+    background:  #F2545B;
+}
+
+.icons ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    padding-right: 14%;
+    float: right;
+    margin: 0 auto;
+}
+
+.icons ul li {
+    transition: 0.4s;
+}
+
+.icons ul li:hover {
+    transform: scale(1.1, 1.1);
 }
 
 h1 {
     font-style: normal;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 36pt;
 
     color: #A93F55;
 }
@@ -70,19 +171,32 @@ h2 {
 }
 
 p {
-    text-indent: 4em;
-    padding: 0em 10em 0em 10em; 
-    font-size: 14pt;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 12pt;
+    color: #19323C;
 }
 
 ol {
-    padding-left: 18em;
-    font-size: 14pt;
+    font-size: 12pt;
+    color: #19323C;
+    padding-left: 5%;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ul {
-    padding-left: 18em;
-    font-size: 14pt;
+    font-size: 12pt;
+    color: #19323C;
+}
+
+.content-list {
+    padding-left: 5%;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer{
@@ -92,8 +206,9 @@ footer{
     position: absolute;
     bottom: 0;
     text-align: center;
-    font-size: 14pt;
+    font-size: 12pt;
     line-height: 4em;
+    color: #F3F7F0;
 }
 
 .content-footer {
@@ -103,6 +218,35 @@ footer{
     position: relative;
     bottom: 0;
     text-align: center;
-    font-size: 14pt;
+    font-size: 12pt;
     line-height: 4em;
+    color: #F3F7F0;
 }
+
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 25pt;
+    }
+
+    .project-icon {
+        width: 0;
+    }
+
+    .project-description {
+        width: 100%;
+    }
+
+    .navbar ul {   
+        width: 87%;
+    }
+
+    .navbar ul li {   
+        font-size: 18pt !important;
+    }
+  }
+
+  @media screen and (max-width: 1050px) {
+    .project-icon{
+        opacity: 0.5;
+    }
+  }
