--- a/site.css
+++ b/site.css
@@ -205,6 +205,13 @@ ul {
     margin-right: auto;
 }
 
+.portrait {
+    margin-left: 12.5%;
+    margin-right: 10px;
+    float: left;
+    width: 25%;
+}
+
 footer{
     min-width: 100%;
     height: 4em;
@@ -248,6 +255,10 @@ footer{
 
     .navbar ul li {   
         font-size: 18pt !important;
+    }
+
+    .portrait {
+        width: 40%;
     }
   }
 
