updated about page

--- a/site.css
+++ b/site.css
@@ -259,6 +259,11 @@ footer{
 
     .portrait {
         width: 40%;
+        border-radius: 100%;
+    }
+    
+    footer {
+        height: 0;
     }
   }
 
